--- a/index.html
+++ b/index.html
@@ -16,71 +16,32 @@
     </section>
 
     <section id="Calculadora">
-        <section id="ContenedorNumeros">
-            <div >
-                <button class="botoncalculadora num1"  onclick="presionar(1)">1</button>
-            </div>
-            <div >
-                <button class="botoncalculadora num2" onclick="presionar(2)">2</button>
-            </div>
-            <div>
-                <button class="botoncalculadora num3" onclick="presionar(3)">3</button>
-            </div>
-            <div>
-                <button class="botoncalculadora num4"onclick="presionar(4)">4</button>
-            </div>
-            <div>
-                <button class="botoncalculadora num5" onclick="presionar(5)">5</button>
-            </div>
-            <div>
-                <button class="botoncalculadora num6"onclick="presionar(6)">6</button>
-            </div>
-            <div>
-                <button class="botoncalculadora num7" onclick="presionar(7)">7</button>
-            </div>
-            <div>
-                <button class="botoncalculadora num8" onclick="presionar(8)">8</button>
-            </div>
-            <div>
-                <button class="botoncalculadora num9" onclick="presionar(9)">9</button>
-            </div>
-            <div>
-                <button class="botoncalculadora num0" onclick="presionar(0)">0</button>
-            </div>
-            <div>
-                <button class="botoncalculadora mas-menos" onclick="presionar()">+/-</button>
-            </div>
-            <div>
-                <button class="botoncalculadora punto" onclick="presionar()">.</button>
-            </div>
-        </section>
+        <!--<section id="ContenedorNumeros">-->
+            
+                <button class="boton-numero num1" grid-area="num1" onclick="presionar(1)">1</button>
+                <button class="boton-numero num2" grid-area="num2" onclick="presionar(2)">2</button>
+                <button class="boton-numero num3" grid-area="num3" onclick="presionar(3)">3</button>
+                <button class="boton-numero num4"onclick="presionar(4)">4</button>
+                <button class="boton-numero num5" onclick="presionar(5)">5</button>
+                <button class="boton-numero num6"onclick="presionar(6)">6</button>
+                <button class="boton-numero num7" onclick="presionar(7)">7</button>
+                <button class="boton-numero num8" onclick="presionar(8)">8</button>
+                <button class="boton-numero num9" onclick="presionar(9)">9</button>
+                <button class="boton-numero num0" onclick="presionar(0)">0</button>
+                <button class="boton-numero mas-menos" onclick="presionar()">+/-</button>
+                <button class="boton-numero punto" onclick="punto('.')">.</button>
+        <!--</section>-->
 
-        <section id="ListadeOperadores">
-            <div>
-                <button id="AC" onclick="limpiar()">AC</button>
-            </div>
-            <div>
-                <button class="parentesis" onclick="limpiar()">( )</button>
-            </div>
-            <div>
-                <button class="Operadores porcentaje" onclick="limpiar()">%</button>
-            </div>
-            <div>
-                <button class="Operadores operador1" onclick="suma('+')">+</button>
-            </div>
-            <div>
-                <button class="Operadores operador2" onclick="resta('-')">-</button>
-            </div>
-            <div>
-                <button class="Operadores operador3" onclick="multiplicar('*')">*</button>
-            </div>
-            <div>
-                <button class="Operadores operador4" onclick="multiplicar('/')">/</button>
-            </div>
-            <div>
-                <button class="Operadores igual" onclick="ejecutaroperacion()">=</button>
-            </div>
-        </section>
+        <!--<section id="ListadeOperadores">-->
+                <button id="AC" class="boton-funcion" grid-area="AC" onclick="limpiar()">AC</button>
+                <button class="boton-funcion parentesis" onclick="limpiar()">( )</button>
+                <button class="boton-funcion porcentaje" onclick="limpiar()">%</button>
+                <button class="boton-funcion operador-suma" onclick="suma('+')">+</button>
+                <button class="boton-funcion operador-resta" onclick="resta('-')">-</button>
+                <button class="boton-funcion operador-multiplicar" onclick="multiplicar('*')">*</button>
+                <button class="boton-funcion operador-dividir" onclick="dividir('/')">/</button>
+                <button class="boton-funcion igual" onclick="ejecutaroperacion()">=</button>
+        <!--</section>-->
     </section>
     <footer></footer>
     <script src="script.js"></script>
