--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
         <!--<section id="ListadeOperadores">-->
                 <button id="AC" class="boton-funcion" grid-area="AC" onclick="limpiar()">AC</button>
-                <button class="boton-funcion parentesis" onclick="limpiar()">( )</button>
+                <button class="boton-funcion parentesis" onclick="parentesis()">( )</button>
                 <button class="boton-funcion porcentaje" onclick="limpiar()">%</button>
                 <button class="boton-funcion operador-suma" onclick="suma('+')">+</button>
                 <button class="boton-funcion operador-resta" onclick="resta('-')">-</button>
