--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <!--<section id="ListadeOperadores">-->
                 <button id="AC" class="boton-funcion" grid-area="AC" onclick="limpiar()">AC</button>
                 <button class="boton-funcion parentesis" onclick="parentesis()">( )</button>
-                <button class="boton-funcion porcentaje" onclick="limpiar()">%</button>
+                <button class="boton-funcion porcentaje" onclick="porcentaje()">%</button>
                 <button class="boton-funcion operador-suma" onclick="suma('+')">+</button>
                 <button class="boton-funcion operador-resta" onclick="resta('-')">-</button>
                 <button class="boton-funcion operador-multiplicar" onclick="multiplicar('*')">*</button>
@@ -43,7 +43,9 @@
                 <button class="boton-funcion igual" onclick="ejecutaroperacion()">=</button>
         <!--</section>-->
     </section>
-    <footer></footer>
+    <footer>
+        <p>Creado por David Herrera. Derechos Reservados&copy</p>
+    </footer>
     <script src="script.js"></script>
     
 </body>
